feat: add interactive run map and chart tooltips to RunDetailScreen
Implements complete run-level map and chart interaction features:
- Add RunMapView component with osmdroid, speed-colored polyline segments,
  start/end markers, and piste overlay (on by default)
- Add collapsible layers menu (map type selector, piste toggle)
- Implement chart-map sync: synced position marker follows drag on chart
- Add floating tooltip to ElevationSpeedChart (elevation/speed/distance values)
- Add indicator circles on both elevation and speed lines
- Add drag gesture support with onPointSelected callback to charts
- Restructure RunDetailScreen: fixed map (300dp) at top, scrollable content below
- Add drawTooltip() and findNearestPointIndex() utilities to ChartUtils
- Update CLAUDE.md with comprehensive architecture, UI flow, and recent work

Resolves feature request for run trace visualization matching Ski-GPX-Analyzer experience.

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>