@@ -4,11 +4,11 @@ This file provides guidance to Claude Code (claude.ai/code) when working with co
 
 ## Project Overview
 
-SkiGPXRecorder is an Android application that records GPS tracks during skiing activities and exports them as GPX files. The app uses a foreground service for continuous location tracking and implements battery-aware auto-save functionality.
+SkiGPXRecorder is an Android application that records GPS tracks during skiing activities, detects individual ski runs via descent analysis, exports tracks as GPX files, and provides comprehensive post-session analysis with maps, charts, and performance statistics. The app uses a foreground service for continuous location tracking, implements battery-aware auto-save, and features a multi-screen UI (recording, session playback with tabs, run detail views).
 
 ## Build and Development Commands
 
-### Building the App
+### Building
 ```bash
 # Build debug APK
 ./gradlew assembleDebug
@@ -16,30 +16,40 @@ SkiGPXRecorder is an Android application that records GPS tracks during skiing a
 # Build release APK
 ./gradlew assembleRelease
 
-# Install debug build to connected device/emulator
+# Install debug to device/emulator
 ./gradlew installDebug
+
+# Build and launch immediately
+./gradlew installDebug && adb shell am start -n com.skigpxrecorder/.MainActivity
 ```
 
-### Running Tests
+### Testing
 ```bash
-# Run unit tests
+# Run all unit tests
 ./gradlew test
 
-# Run instrumented tests (requires device/emulator)
+# Run instrumented Android tests (device/emulator required)
 ./gradlew connectedAndroidTest
 
-# Run specific test class
-./gradlew test --tests com.skigpxrecorder.YourTestClass
+# Run specific unit test class
+./gradlew test --tests com.skigpxrecorder.domain.RunDetectorTest
+
+# Run specific instrumented test
+./gradlew connectedAndroidTest --tests com.skigpxrecorder.RecordingScreenTest
 ```
 
-### Code Quality
+### Development Tools
 ```bash
 # Clean build artifacts
 ./gradlew clean
 
-# Check for dependency updates
-./gradlew dependencyUpdates
+# Inspect dependency tree
+./gradlew dependencies
 ```
+
+### Configuration
+- **Google Maps API Key**: Create `secrets.properties` in project root with `MAPS_API_KEY=AIza...` (gitignored; see "Google Maps Setup" below)
+- **Local overrides**: `local.properties` for SDK path, not committed
 
 ## Architecture
 
@@ -105,12 +115,34 @@ SkiGPXRecorder is an Android application that records GPS tracks during skiing a
 8. On session end, final GPX file is generated and saved to external storage with accuracy data
 9. Users can filter waypoints by accuracy during post-processing
 
+### Ski Run Detection (RunDetector)
+The app automatically detects ski runs using a window-based descent analysis algorithm:
+- **20-point trend window**: Analyzes elevation change over recent points
+- **5-point elevation smoothing**: Reduces noise in elevation data
+- **Speed threshold**: Minimum 5 km/h to qualify as active skiing
+- **Duration requirement**: Minimum 60 seconds per run
+- **Vertical requirement**: Minimum 30m drop per run
+- **Gap tolerance**: Runs separated by <120s and <50m ascent are combined
+- All detected runs stored in Room database and accessible via `SkiRun` data model
+
+### Statistics Calculation (StatsCalculator)
+- **Distance**: Haversine formula between consecutive GPS points
+- **Elevation change**: Cumulative gain/loss (no dead-zone filtering applied)
+- **Speed**: Raw speed from GPS, smoothed via moving window (Constants.SPEED_SMOOTHING_WINDOW)
+- Both batch and incremental (single-point) update modes available
+- Critical for real-time UI updates and post-session analysis
+
 ### Important Constants
-All thresholds and intervals are centralized in `util/Constants.kt`:
-- `LOCATION_UPDATE_INTERVAL`: GPS update frequency
-- `GPS_ACCURACY_THRESHOLD`: Reference value for UI display (no longer used for filtering)
-- `AUTO_SAVE_INTERVAL`: How often to save temporary GPX files
-- `BATTERY_WARNING_THRESHOLD` / `BATTERY_AUTO_STOP_THRESHOLD`: Battery management levels
+Centralized in `util/Constants.kt`:
+- `LOCATION_UPDATE_INTERVAL`: 1000ms (GPS update frequency)
+- `AUTO_SAVE_INTERVAL`: 60000ms (temp GPX file save period)
+- `BATTERY_WARNING_THRESHOLD`: 10% (user warning level)
+- `BATTERY_AUTO_STOP_THRESHOLD`: 5% (automatic session stop)
+- `GPS_ACCURACY_THRESHOLD`: 30m (reference value; not used for filtering)
+- `RUN_DETECTION_SPEED_THRESHOLD`: 5.0 km/h
+- `RUN_DETECTION_MIN_DURATION`: 60 seconds
+- `RUN_DETECTION_MIN_VERTICAL`: 30 meters
+- `SPEED_SMOOTHING_WINDOW`: Window size for speed averaging
 
 ## Permissions and Services
 
@@ -147,18 +179,63 @@ The recording screen uses Google Maps Compose for a modern, full-screen map expe
 
 The secrets-gradle-plugin automatically injects the API key as a manifest meta-data value.
 
-## Map Implementations
+## UI Architecture & Navigation
 
-- **Recording screen** (`RecordingScreen.kt`): Google Maps Compose (`GoogleMapsView.kt`) for live tracking with smooth polyline overlay
-- **Session playback screens** (e.g., `SessionScreen.kt`): osmdroid for historical track display (separate from recording flow)
-- Both libraries coexist; gradual migration from osmdroid to Google Maps is planned
+### Screen Hierarchy
+1. **RecordingScreen** - Main recording interface (Google Maps)
+   - Recording: full-screen map + BottomSheetScaffold with stats + floating stop button
+   - Idle: full-screen map + floating start button
 
-## Known Considerations
+2. **SessionScreen** - Playback & analysis (tabbed interface)
+   - **TrackView**: Run list (SkiRunCard), session stats, jump to RunDetailScreen
+   - **MapView**: osmdroid map with speed-colored polyline, markers, piste overlay
+   - **ProfileView**: Large elevation chart with zoom, speed overlay, run region highlighting
+   - **AnalysisView**: Performance metrics, speed histogram, time distribution
 
-- The app uses `kapt` for Room and Hilt annotation processing, which requires special JVM flags (configured in gradle.properties)
-- GPX files are saved to app-specific external storage using scoped storage (no WRITE_EXTERNAL_STORAGE permission needed on API 29+)
-- The service uses PARTIAL_WAKE_LOCK without timeout - ensure proper cleanup on service destruction
-- Battery monitoring uses BroadcastReceiver for ACTION_BATTERY_CHANGED
-- GPS accuracy filtering is disabled - all positions are recorded with accuracy metadata in GPX extensions for post-processing
-- `BottomSheetScaffold` uses `@ExperimentalMaterial3Api` - API may change in future Material3 releases
-- RecordingScreen uses Box layering for map overlay effects (top bar gradient, floating button, bottom sheet)
+3. **RunDetailScreen** - Single run detail (NEW)
+   - Fixed 300dp osmdroid RunMapView at top (speed-colored polyline, start/end markers, synced chart position)
+   - Scrollable content below: stats grid, ElevationSpeedChart with interactive tooltip, SpeedHistogram, RunComparisonCard
+
+4. **SessionHistoryScreen** - Session list with grouping/filtering
+5. **SettingsScreen**, **HighscoreScreen**, **MapAllSessionsScreen**
+
+### Map Implementations
+
+- **Recording screen** (`RecordingScreen.kt`): **Google Maps Compose** (GoogleMapsView.kt) for live tracking with polyline overlay
+- **Session map tab** (`SessionScreen.kt` → MapView.kt): **osmdroid** for historical track display with speed-colored polyline, markers, OpenSnowMap piste overlay
+- **Run detail** (`RunDetailScreen.kt` → RunMapView.kt): **osmdroid** with speed-colored segments, start/end markers, synced position indicator, piste overlay (on by default)
+- Both libraries coexist for different use cases; gradual consolidation planned
+
+### Chart Components with Interactive Features
+- **ElevationSpeedChart**: Dual-axis elevation + speed overlay with drag gesture support, floating tooltip (elevation/speed/distance), indicator circles, onPointSelected callback
+- **ElevationProfileChart**: Zoomable elevation profile with optional speed overlay and run region highlighting
+- **SpeedHistogram**: 6-bucket speed distribution bar chart
+- **DonutChart**: Circular percentage display
+
+## Key Implementation Notes
+
+### Annotation Processing
+- **KAPT**: Room and Hilt require special JVM flags (`-XX:+IgnoreUnrecognizedVMOptions`, `-XX:MaxPermSize=2048m`) in gradle.properties
+- **Hilt**: All ViewModels use `@HiltViewModel` for automatic injection; Activities use `@AndroidEntryPoint`
+
+### Data Persistence
+- **Room Database**: 3 main tables (recording_sessions, track_points, ski_runs) with migration path v1→v2→v3
+- **GPX Export**: Saved to app-specific external storage via scoped storage (API 29+, no WRITE_EXTERNAL_STORAGE needed)
+- **Accuracy metadata**: All track points include GPS accuracy as GPX extensions for post-processing filtering
+
+### Service Lifecycle
+- **LocationService**: PARTIAL_WAKE_LOCK without timeout - ensure cleanup on service destruction
+- **Battery monitoring**: BroadcastReceiver listening to ACTION_BATTERY_CHANGED (10% warning, 5% auto-stop)
+- **Auto-save**: Periodic temp GPX writes every 60 seconds to prevent data loss on crash
+
+### UI Specifics
+- **Experimental APIs**: BottomSheetScaffold uses `@ExperimentalMaterial3Api`
+- **Compose layering**: RecordingScreen uses Box stacking for map + top gradient bar + floating button + bottom sheet
+- **Chart rendering**: Custom Canvas-based implementation (no external charting library); drawTooltip() renders floating info boxes
+- **runMapView**: Uses custom Drawable classes for colored circle markers with text labels
+
+### File Import/Export
+- **Supported formats**: GPX (native) and FIT (Garmin)
+- **Cloud providers**: Auto-detects and resolves cloud storage URIs
+- **Error handling**: Retry logic with 500ms delays for network/IO operations
+- **Database integration**: Imported sessions automatically persisted with run detection applied
